--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,17 @@ body{
   font-family: sans-serif;
   font-weight: 900;
   font-size: larger;
-  background-color: black;
+  
+  background-image: linear-gradient(to right, #ffe561 0%, #ff8b7e 100%);
+}
+
+a .btn1{
+  color: white;
+  display: flex;
+  text-decoration: none;
+  flex-direction: column;
+}
+a .btn1:hover{
+  color: rgb(255, 205, 232);
+  transition: 0.3s;
 }
