--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,13 +5,12 @@
     margin-bottom: 10px;
 }
 .header{
-    background-color: #282828;
+    background-color: #ffd695;
     width: 410px;
-    height: 660px;
+    height: 680px;
     border-radius: 10px;
     padding: 20px;
     margin: 20px;
-    
     
 }
 .containerLogo{
@@ -22,7 +21,7 @@
 }
 
 nav{
-    background-color: #646262;
+    background-color: #fff193;
     color: black;
     width: 360px;
     height: 150px;
@@ -32,6 +31,7 @@ nav{
     justify-content: center;
     border-radius: 10px;
     gap: 30px;
+    box-shadow: 0 0 10px #fff193, 0 0 20px #fff193, 0 0 60px #fff193;
     
 }
 
