--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 .logo{
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     padding: 10px;
     margin-bottom: 10px;
 }
@@ -17,12 +17,13 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    color: #FFF;
+    color: rgb(114, 38, 5);
+    font-size: xx-large;
 }
 
 nav{
     background-color: #fff193;
-    color: black;
+    color: rgb(114, 38, 5);
     width: 360px;
     height: 150px;
     display: flex;
@@ -31,7 +32,7 @@ nav{
     justify-content: center;
     border-radius: 10px;
     gap: 30px;
-    box-shadow: 0 0 10px #fff193, 0 0 20px #fff193, 0 0 60px #fff193;
+    /* box-shadow: 0 0 10px #fff193, 0 0 20px #fff193, 0 0 60px #fff193; */
     
 }
 
@@ -40,5 +41,5 @@ nav a{
     margin-left: 25px;
     gap: 30px;
     text-decoration: none;
-    color: black;
+    color: rgb(114, 38, 5);
 }
