--- a/src/components/Catalogo.css
+++ b/src/components/Catalogo.css
@@ -2,7 +2,7 @@
     width: 70%;
     position: absolute;
     right: 50px;
-    top: 100px;
+    top: 90px;
 
 }
 
@@ -10,6 +10,24 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 50px;
+}
+.card{
+    background-color: blanchedalmond;
+    margin: 20px;
+    border-radius: 5px;
+    width: 240px;
+    height: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
 }
 
+.cover{
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 5px;
+}
