--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,12 @@ body{
   font-weight: 900;
   font-size: larger;
   
+
   background-image: linear-gradient(to right, #ffe561 0%, #ff8b7e 100%);
+}
+
+.caja1{
+  
 }
 
 a .btn1{
