--- a/src/components/Botones.css
+++ b/src/components/Botones.css
@@ -1,18 +1,18 @@
 .botones {
+    width: 30%;
     display: flex;
     justify-content: flex-end;
-    align-items: flex-end;
     position: absolute;
     top: 0;
-    right: 20px;
-    align-items: normal;
-    margin-top: 10px;
+    right: 1%;
+    margin-top: 1%;
+    font-size: calc(2vw + .7em);
 }
 
 .registrarte {
     background: none;
     border: none;
-    font-size: 25px;
+    font-size: calc(-.3vw + .7em);
     margin: 20px;
     font-family: sans-serif;
     font-weight: 900;
@@ -36,9 +36,7 @@
     border-radius: 22px; 
     font-family: sans-serif;
     font-weight: 900;
-    font-size: 25px;
-    width: 210px;
-    height: 50px;
+    font-size: calc(-.3vw + .7em);
     margin: 10px;
 }
 #btn{
