--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,31 +1,31 @@
 .logo{
-    width: 70px;
-    height: 70px;
+    width: 20%;
+    height: 20%;
     padding: 10px;
     margin-bottom: 10px;
 }
 .header{
     background-color: #ffd695;
-    width: 410px;
-    height: 680px;
+    width: 25vw;
+    height: 100vh;
     border-radius: 10px;
     padding: 20px;
-    margin: 20px;
-    
+    margin: 0px;
 }
 .containerLogo{
+    width: 100%;
     display: flex;
     justify-content: start;
     align-items: center;
     color: rgb(114, 38, 5);
-    font-size: xx-large;
+    font-size: calc(2.5vw - .1em);
 }
 
 nav{
     background-color: #fff193;
     color: rgb(114, 38, 5);
-    width: 360px;
-    height: 150px;
+    width: 100%;
+    height: 20%;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -33,10 +33,12 @@ nav{
     border-radius: 10px;
     gap: 30px;
     /* box-shadow: 0 0 10px #fff193, 0 0 20px #fff193, 0 0 60px #fff193; */
-    
+    font-size: calc(1.5vw - .1em);
+
 }
 
 nav a{
+    width: 50%;
     display: flex;
     margin-left: 25px;
     gap: 30px;
