--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .logo{
-    width: 20%;
+    width: 80px;
     height: 20%;
     padding: 10px;
     margin-bottom: 10px;
@@ -37,35 +37,3 @@ nav{
 
 }
 
-.ico-a{
-    width: 50%;
-    display: flex;
-    align-items: center;
-    margin-left: 25px;
-    gap: 30px;
-    text-decoration: none;
-    color: rgb(114, 38, 5);
-}
-.search{
-    margin-left: 19px;
-    margin-right: 20px;
-    border: none;
-    background: none;
-}
-.activate-search{
-    display: flex;
-}
-.br{
-    display: flex;
-    align-items: center;
-    gap: 30px;
-    border: none;
-    background: transparent;
-    outline: none;
-}
-input::placeholder{
-    display: flex;
-    color: rgb(114, 38, 5);
-    font-size: calc(1.5vw - .1em);
-    font-weight: 900;
-}
